added project details

--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # site settings
 title: GLAS
 subtitle: TEAM 1
-email: youremailaddress@gmail.com
-description: Our project description
+email:
+description: This project for SQS is a continuation of the website built by student teams over the last few semsesters. The goal is to make the website a resource for their Sales organization to find employees with certain skills and experience.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
-country: United States of America
-phone: (716) 555-5555
+street_address:
+city:
+state:
+zip_code:
+country:
+phone:
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
